# corehandler

./: Android.mk  CMakeLists.txt  LICENSE  Makefile  README.md
patch/: add-thread-id-to-core-pattern.patch  ptrace-fixup.patch
src/: config.h  elf.c  elf.h  elf2.c  elf_lib.c  elf_lib.h  main.c  old_elf.c  proc.c  proc.h  test_elf.c  unwind.c  unwind.h  util.c  util.h  version.h  xmalloc.c  xmalloc.h
test/: test_elf_lib.c
